added ESLint to enforce stylistic consistency
note that this assumes modules reside either in the root directory or in
`src` - which seems to be the most common convention

ESLint configuration is intentionally more lenient than EditorConfig WRT
line length

--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,9 @@ indent_style = space
 indent_style = space
 indent_size = 2
 
+[.eslintrc]
+indent_style = space
+
 [COMMIT_EDITMSG]
 trim_trailing_whitespace = false
 max_line_length = 72
