--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "start": "webpack --progress --colors --watch",
+    "test": "eslint --cache *.js src && echo ✓",
     "compile": "webpack"
   },
   "dependencies": {},
@@ -8,6 +9,7 @@
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
+    "eslint": "^2.1.0",
     "webpack": "^1.12.13"
   }
 }
