--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
     "install": "^0.4.4",
+    "lvm-las-assets": "git+ssh://git@github.com/innoq/lvm-las-assets.git",
     "npm": "^3.7.3"
   },
   "devDependencies": {
