--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "scripts": {
     "start": "webpack --progress --colors --watch",
     "test": "eslint --cache *.js src && echo ✓",
-    "compile": "webpack"
+    "compile": "npm run webpack && npm run less",
+    "webpack": "webpack",
+    "less": "lessc --npm-import index.less app/assets/stylesheets/application.css"
   },
   "dependencies": {
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
     "install": "^0.4.4",
+    "less": "^2.6.0",
+    "less-plugin-npm-import": "^2.1.0",
     "lvm-las-assets": "git+ssh://git@github.com/innoq/lvm-las-assets.git",
     "npm": "^3.7.3"
   },
