--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "compile": "npm run webpack && npm run less && npm run assets",
     "assets": "copy-assets app/assets",
     "webpack": "webpack",
-    "less": "lessc --npm-import index.less app/assets/stylesheets/application.css"
+    "less": "lessc --npm-import --clean-css --source-map-less-inline --source-map-map-inline index.less app/assets/stylesheets/application.css"
   },
   "dependencies": {
     "eslint-config-standard": "^5.1.0",
@@ -13,6 +13,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "install": "^0.4.4",
     "less": "^2.6.0",
+    "less-plugin-clean-css": "^1.5.1",
     "less-plugin-npm-import": "^2.1.0",
     "lvm-las-assets": "git+ssh://git@github.com/innoq/lvm-las-assets.git",
     "npm": "^3.7.3"
