Cleanup of NPM tasks

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
-    "start": "webpack --progress --colors --watch",
     "test": "eslint --cache *.js src && lessc --npm-import --lint index.less && echo ✓",
     "compile": "npm run webpack && npm run less && npm run assets",
     "assets": "copy-assets app/assets",
     "webpack": "webpack",
+    "webpack-watch": "webpack --progress --colors --watch",
     "less": "lessc --npm-import --clean-css --source-map-less-inline --source-map-map-inline index.less app/assets/stylesheets/application.css"
   },
   "dependencies": {
