--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -12,6 +12,7 @@
       - 'deb https://deb.nodesource.com/node_{{ nodejs_version }} trusty main'
     apt_packages:
       - build-essential
+      - git
       - nodejs
       - ruby{{ ruby_version }}
       - ruby{{ ruby_version }}-dev
