--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "server": "node .",
     "test": "eslint --cache frontend/**/*.js src && lessc --npm-import --lint frontend/index.less && echo ✓",
     "compile": "npm run webpack && npm run less && npm run assets",
     "assets": "copy-assets public",
@@ -12,11 +13,14 @@
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
+    "express": "^4.13.4",
     "install": "^0.4.4",
     "less": "^2.6.0",
     "less-plugin-clean-css": "^1.5.1",
     "less-plugin-npm-import": "^2.1.0",
     "lvm-las-assets": "git+ssh://git@github.com/innoq/lvm-las-assets.git",
+    "mustache": "^2.2.1",
+    "mustache-express": "^1.2.2",
     "npm": "^3.7.3"
   },
   "devDependencies": {
