--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "foreman": "nf start",
-    "server": "node .",
+    "server": "node --use-strict .",
     "lasrest": "node node_modules/lasrest",
     "test": "eslint --cache frontend/**/*.js src && lessc --npm-import --lint frontend/index.less && echo ✓",
     "compile": "npm run webpack && npm run less && npm run assets",
