--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "foreman": "nf start",
     "server": "nodemon -e js,mustache,json -L --use-strict .",
     "lasrest": "node node_modules/lasrest",
-    "test": "eslint --cache frontend/**/*.js src && lessc --npm-import --lint frontend/index.less && echo ✓",
+    "test": "eslint --cache index.js lib/**/*.js frontend/**/*.js && lessc --npm-import --lint frontend/index.less && echo ✓",
     "compile": "npm run webpack && npm run less && npm run assets",
     "assets": "copy-assets public",
     "webpack": "webpack",
