add date handling using moment.js

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "less-plugin-clean-css": "^1.5.1",
     "less-plugin-npm-import": "^2.1.0",
     "lvm-las-assets": "git+ssh://git@github.com/innoq/lvm-las-assets.git",
+    "moment": "^2.11.2",
     "mustache": "^2.2.1",
     "nodemon": "^1.9.1",
     "npm": "^3.7.3",
