--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "foreman": "nf start",
     "server": "nodemon -e js,mustache,json -L --use-strict .",
     "lasrest": "node node_modules/lasrest",
-    "test": "eslint --cache index.js lib/**/*.js frontend/**/*.js && lessc --npm-import --lint frontend/index.less && echo ✓",
+    "test": "node --use-strict tests/*.js && npm run lint",
+    "lint": "eslint --cache index.js lib/**/*.js tests/**/*.js frontend/**/*.js && lessc --npm-import --lint frontend/index.less && echo ✓",
     "compile": "npm run webpack && npm run less && npm run assets",
     "assets": "copy-assets public",
     "webpack": "webpack",
@@ -18,7 +19,7 @@
     "express": "^4.13.4",
     "foreman": "^1.4.1",
     "install": "^0.4.4",
-    "lasrest": "git+ssh://git@github.com/grueny/lasrest.git",
+    "lasrest": "git+ssh://git@github.com/grueny/lasrest.git#importable",
     "less": "^2.6.0",
     "less-plugin-clean-css": "^1.5.1",
     "less-plugin-npm-import": "^2.1.0",
@@ -34,6 +35,8 @@
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "eslint": "^2.1.0",
-    "webpack": "^1.12.13"
+    "webpack": "^1.12.13",
+    "zombie": "^4.2.1",
+    "tape": "^4.5.0"
   }
 }
