Use nodemon for less-watch, removing the need for entr

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "webpack": "webpack",
     "webpack-watch": "webpack --progress --colors --watch",
     "less": "lessc --npm-import --clean-css --source-map-less-inline --source-map-map-inline frontend/index.less public/application.css",
-    "less-watch": "find frontend -name '*less' | entr npm run less"
+    "less-watch": "nodemon -e less --exec 'npm run less'"
   },
   "dependencies": {
     "eslint-config-standard": "^5.1.0",
