--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "5.5.0"
+  },
   "scripts": {
     "server": "nodemon -e js,mustache,json -L --use-strict .",
     "test": "node --use-strict tests/*.js && npm run lint",
