--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "eslint-plugin-standard": "^1.3.2",
     "express": "^4.13.4",
     "install": "^0.4.4",
-    "lasrest": "git+ssh://git@github.com/grueny/lasrest.git#importable",
+    "lasrest": "grueny/lasrest#importable",
     "less": "^2.6.0",
     "less-plugin-clean-css": "^1.5.1",
     "less-plugin-npm-import": "^2.1.0",
-    "lvm-las-assets": "git+ssh://git@github.com/innoq/lvm-las-assets.git",
+    "lvm-las-assets": "git+https://2dbeae95a72231d3114bfe96eb4e18c31a6f2ef3:x-oauth-basic@github.com/innoq/lvm-las-assets.git",
     "moment": "^2.11.2",
     "mustache": "^2.2.1",
     "nodemon": "^1.9.1",
     "npm": "^3.7.3",
-    "simplete": "git+ssh://git@github.com:innoq/simplete.git#response_result_filter"
+    "simplete": "innoq/simplete#response_result_filter"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
