--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "node": "5.5.0"
   },
   "scripts": {
+    "postinstall": "npm run compile",
     "server": "nodemon -e js,mustache,json -L --use-strict .",
     "test": "node --use-strict tests/*.js && npm run lint",
     "lint": "eslint --cache index.js lib/**/*.js tests/**/*.js frontend/**/*.js && lessc --npm-import --lint frontend/index.less && echo ✓",
