--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less-watch": "nodemon -e less --exec 'npm run less'"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
     "compression": "^1.6.1",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
