--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "less": "^2.6.0",
     "less-plugin-clean-css": "^1.5.1",
     "less-plugin-npm-import": "^2.1.0",
-    "lvm-las-assets": "git+https://2dbeae95a72231d3114bfe96eb4e18c31a6f2ef3:x-oauth-basic@github.com/innoq/lvm-las-assets.git",
+    "lvm-las-assets": "git+https://2dbeae95a72231d3114bfe96eb4e18c31a6f2ef3:x-oauth-basic@github.com/innoq/lvm-las-assets.git#dependentInputs",
     "moment": "^2.11.2",
     "mustache": "^2.2.1",
     "nodemon": "^1.9.1",
