--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "express": "^4.13.4",
     "install": "^0.4.4",
+    "jquery-pjax": "defunkt/jquery-pjax",
     "lasrest": "grueny/lasrest#6e0344ecb158e47a33633bde7a621c3e0f41fc85",
     "less": "^2.6.0",
     "less-plugin-clean-css": "^1.5.1",
@@ -33,8 +34,8 @@
     "npm": "^3.7.3",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
-    "simplete": "innoq/simplete#response_result_filter",
-    "jquery-pjax": "defunkt/jquery-pjax"
+    "select2": "^4.0.2",
+    "simplete": "innoq/simplete#response_result_filter"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
