--- a/package.json
+++ b/package.json
@@ -27,13 +27,11 @@
     "less": "^2.6.0",
     "less-plugin-clean-css": "^1.5.1",
     "less-plugin-npm-import": "^2.1.0",
-    "lvm-las-assets": "git+https://2dbeae95a72231d3114bfe96eb4e18c31a6f2ef3:x-oauth-basic@github.com/innoq/lvm-las-assets.git#9629e91bf59e1fa9b6ba6126a498de6ec04605dc",
+    "lvm-las-assets": "LVM-IT/roca-las-assets#38ea3b1499f85d5da28df5debcf3a36381cc78b6",
     "moment": "^2.11.2",
     "mustache": "^2.2.1",
     "nodemon": "^1.9.1",
     "npm": "^3.7.3",
-    "passport": "^0.3.2",
-    "passport-http": "^0.3.0",
     "select2": "^4.0.2",
     "simplete": "innoq/simplete#response_result_filter"
   },
